fixed up results.

--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -46,6 +46,9 @@ and thus deal with the elasticity of parameters. As I mentioned in
 \autoref{sec:BackgroundConclusion}, a chief advantage of using physiologically
 plausible models is that such data may in fact be added with relative ease.
 
+Automatic detection of the noise level in the signal, to get a decent wieghting
+function.
+
 In conclusion, using particle filters to estimate the BOLD response are 
 a powerful method of fitting to noisy data. The technique also
 holds great promise as extensible platform to build more advanced models
