--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -64,7 +64,8 @@ It all begins with localizing the first activation regions in the
 chain. Therefore this section compares the output of the particle filter 
 with conventional SPM. 
 
-In reality, the statistical parametric mapping method is very different from the 
+In reality, the purpose of statistical parametric mapping method is 
+very different from the 
 particle filter algorithm described in this work.
 SPM preprocesses the image by spatially smoothing the FMRI image (in this section 
 SPM8 was used with an $8mm x 8mm x 8mm$ Gaussian kernel), whereas
